<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Accounts.RegistrationDetails_oneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:background="@color/light_white"
        android:elevation="5dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:onClick="BackButton"
                android:background="@color/transparent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_back" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="15dp"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/enter_full_name"
            android:textSize="@dimen/edittext_size"
            android:padding="20dp"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:hint="@string/email_address"
            android:textSize="@dimen/edittext_size"
            android:padding="20dp"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/etabout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:hint="@string/aboutyou"
            android:textSize="@dimen/edittext_size"
            android:padding="20dp"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/etbirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:hint="Enter Your Birth Date"
            android:textSize="@dimen/edittext_size"
            android:padding="20dp"
            android:textColorHint="@color/dark_gray"/>

        <Button
            android:id="@+id/btn_contact"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_pink_background"
            android:text="@string/next"
            android:textAllCaps="true"
            android:onClick="Registration_Details_1"
            android:textColor="@color/white" />
    </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</FrameLayout>