<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Accounts.ContactNumberActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="@color/light_white"
            android:elevation="5dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="32dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:background="@color/transparent"
                    android:onClick="BackButton"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_back"
                    tools:ignore="OnClick" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_margin="15dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/my_number_is"
                    android:textColor="@color/black"
                    android:textSize="35dp" />

                <EditText
                    android:id="@+id/etmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:inputType="phone"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etmobile"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="10dp"
                        android:text="@string/contact_text"
                        android:textColor="@color/dimgray"
                        android:textSize="15dp" />

                    <Button
                        android:id="@+id/btn_contact"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/ic_pink_background"
                        android:text="@string/btn_continue"
                        android:textAllCaps="true"
                        android:onClick="SendContact"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>